# frappe_factory_bot

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
frappe_factory_bot/: hooks.py  modules.txt  py.typed
frappe_factory_bot/frappe_factory_bot/: base_factory.py  test_base_factory.py
