[project]
name = "frappe_factory_bot"
authors = [{ name = "Tomas Barry", email = "tomasbarry101@gmail.com" }]
description = "Factory Bot - but for Frappe!"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
mypy = "1.11.2"
pre-commit = "4.1.0"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = [
    "E501", # line too long
]
typing-modules = ["frappe.types.DF"]
